--- a/src/components/Consult/Consult.scss
+++ b/src/components/Consult/Consult.scss
@@ -2,44 +2,24 @@
 
 
 div {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    width: 100% !important;
+    padding-left: 0 ;
+    padding-right: 0 ;
+    width: 100% ;
     
 
     h1 {        
       text-align: center;
       font-size: 30px;
     }
-  
-    Input {    
-    //  
-      position: absolute;
-      top: 35%;
-      left: 50%;
-      transform: translate(-50%, -50%);position: absolute;
-    //  
-//
-      text-align: center;
-      height: 20px;
-      width: 400px;
-    
+
       
-
+      
     }
 
-    Button { 
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-     
-      background-color: aqua;
-      margin-top: 50px;       
-      text-align: center;
-      font-size: 20px;
-      height: 50px;
-      width: 100px;
-      border-radius: 10px;
-    }
-  }
+  .Button { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+ }
