--- a/src/components/DatosModal/DatosModal.scss
+++ b/src/components/DatosModal/DatosModal.scss
@@ -1,13 +1,6 @@
 @import '~antd/dist/antd.css';
 
-//.modal-video {
-//    position: fixed;
-//    z-index: 1; 
-//    top: 0%;
-//    left: 0%;
-//    min-height: 100%;
-//    background-color: 0, 0, 0, 0.75;
-//  
-//    
-//    
-//  }
+#h3{
+
+    display: flexbox;
+}
